fixed word-wrap for long answers and responsive padding

--- a/main.scss
+++ b/main.scss
@@ -316,6 +316,7 @@ $screen-xl-min: 1200px;
   width: 90%;
   height: 80%;
   margin-bottom: 5%;
+  padding-bottom: 5%;
 
   -webkit-animation: fadein 7s; /* Safari, Chrome and Opera > 12.1 */
   -moz-animation: fadein 7s; /* Firefox < 16 */
@@ -326,6 +327,7 @@ $screen-xl-min: 1200px;
     width: 70%;
     margin-top: 5%;
     margin-bottom: 5%;
+    padding-bottom: 2%;
   }
   @include md {
     width: 50%;
@@ -387,10 +389,15 @@ $screen-xl-min: 1200px;
 
   &__cell--screen {
     background-color: white;
-    width: auto;
+    width: 100%;
     border-radius: 25px;
+    padding: 15px;
+    display: block;
+    word-wrap: break-word;
     & > p {
       word-wrap: break-word;
+      width: 100%;
+      height: 100%;
     }
 
     // set grid column -> starts / ends
